welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.error
Diagonal:6: error: not found: value lig
    setPos(col-lig,lign);
               ^